WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175261
Web Automation: setUserInputForCurrentJavaScriptPrompt should fail if current dialog is not a prompt
https://bugs.webkit.org/show_bug.cgi?id=175261
Summary
Web Automation: setUserInputForCurrentJavaScriptPrompt should fail if current...
Carlos Garcia Campos
Reported
2017-08-07 04:11:02 PDT
https://w3c.github.io/webdriver/webdriver-spec.html#send-alert-text
Attachments
Patch
(11.83 KB, patch)
2017-08-07 04:19 PDT
,
Carlos Garcia Campos
bburg
: review+
Details
Formatted Diff
Diff
Patch for landing
(11.82 KB, patch)
2017-08-07 23:28 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.92 KB, patch)
2017-08-07 23:52 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-08-07 04:12:23 PDT
This causes test testSettingTheValueOfAnAlertThrows to fail: _______________________________________________________________________ testSettingTheValueOfAnAlertThrows[WebKitGTK] ________________________________________________________________________ driver = <selenium.webdriver.webkitgtk.webdriver.WebDriver (session="9ba3f06c-5437-4548-93de-bd4eb5c12f15")>, pages = <conftest.Pages object at 0x7f4785758950> @pytest.mark.xfail_chrome( reason='
https://bugs.chromium.org/p/chromedriver/issues/detail?id=1353
') @pytest.mark.xfail_phantomjs( reason='
https://github.com/detro/ghostdriver/issues/20
', raises=WebDriverException) def testSettingTheValueOfAnAlertThrows(driver, pages): pages.load("alerts.html") driver.find_element(By.ID, "alert").click() alert = _waitForAlert(driver) with pytest.raises(InvalidElementStateException):
> alert.send_keys("cheese")
E Failed: DID NOT RAISE <class 'selenium.common.exceptions.InvalidElementStateException'>
Carlos Garcia Campos
Comment 2
2017-08-07 04:19:44 PDT
Created
attachment 317411
[details]
Patch
Blaze Burg
Comment 3
2017-08-07 11:19:16 PDT
Comment on
attachment 317411
[details]
Patch r=me if it builds. Please upload rebased patch.
Radar WebKit Bug Importer
Comment 4
2017-08-07 23:25:52 PDT
<
rdar://problem/33770078
>
Carlos Garcia Campos
Comment 5
2017-08-07 23:28:26 PDT
Created
attachment 317546
[details]
Patch for landing
Build Bot
Comment 6
2017-08-07 23:30:30 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 7
2017-08-07 23:52:43 PDT
Created
attachment 317548
[details]
Patch for landing
Carlos Garcia Campos
Comment 8
2017-08-08 01:29:30 PDT
Committed
r220394
: <
http://trac.webkit.org/changeset/220394
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug